# modulo_III

./: README.md  docker-compose.yml
TITANIC/: requirements.txt
TITANIC/app/: Dockerfile
TITANIC/data/: test_utils.csv
TITANIC/models/: modelo_pipeline.joblib
TITANIC/server/: Dockerfile  main.py  requirements.txt
TITANIC/server/classifier/: classifier.py
TITANIC/server/models/: modelo_pipeline.joblib  models.py
TITANIC/server/src/: main.py
TITANIC/server/test/unit/: test_unit.py
TITANIC/src/: preprocess_train.py  utils.py
TITANIC/src/notebooks/: preprocess_train.ipynb
TITANIC/train/: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
TITANIC/train/notebooks/: preprocess_train.ipynb
TITANIC/train/src_train/: main.py  utils.py
TITANIC/train/test/integration/: test_integration.py
TITANIC/utils/: README.md  pyproject.toml  requirements.txt
TITANIC/utils/src_utils/: utils.py
TITANIC/utils/test/integration/: test_integration.py
TITANIC/utils/test/unit/: test_extract_cabin.py  test_extract_title.py  test_type_converter.py
