[tool.poetry]
name = "src-utils"
version = "0.1.0"
description = "Utils for ML preprocessing"
authors = ["RoSaavedra <55178179+RoSaavedra@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src_utils"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
